--- a/notebooks/test_scripts.ipynb
+++ b/notebooks/test_scripts.ipynb
@@ -1404,7 +1404,7 @@
     "    return downsampled\n",
     "\n",
     "\n",
-    "data_dir = \"E:\\\\lry\\\\code\\\\style3d_gen\\\\resources\\\\examples\\\\breps\"\n",
+    "data_dir = \"E:\\\\lry\\\\code\\\\style3d_gen\\\\resources\\\\examples\\\\breps\\\\data\"\n",
     "# data_dir = \"E:\\\\lry\\\\data\\\\AIGP\\\\demo_v2\\\\Q2\\\\brep_reso_256_edge_snap\"\n",
     "\n",
     "for idx in range(1,6):\n",
@@ -1689,31 +1689,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[_to_o3d_pc] color:  std::vector<Eigen::Vector3d> with 7993 elements.\n",
+      "[_to_o3d_pc] color:  std::vector<Eigen::Vector3d> with 2137 elements.\n",
       "Use numpy.asarray() to access data.\n",
-      "[_to_o3d_pc] color:  std::vector<Eigen::Vector3d> with 32000 elements.\n",
+      "[_to_o3d_pc] color:  std::vector<Eigen::Vector3d> with 10000 elements.\n",
       "Use numpy.asarray() to access data.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
     "import pickle\n",
     "\n",
     "import cv2\n",
-    "from PIL import Image\n",
     "\n",
     "import open3d as o3d\n",
     "import numpy as np\n",
     "\n",
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
     "\n",
     "def _to_o3d_pc(xyz: np.ndarray, color=None):\n",
     "    pcd = o3d.geometry.PointCloud()\n",
@@ -1725,101 +1727,150 @@
     "        if len(color) != len(xyz): \n",
     "            color = np.array(color)[None].repeat(len(xyz), axis=0)\n",
     "        pcd.colors = o3d.utility.Vector3dVector(color)\n",
+    "    else:\n",
+    "        pcd.colors = o3d.utility.Vector3dVector(0.771 * np.ones_like(xyz))\n",
     "\n",
     "    return pcd\n",
+    "\n",
     "\n",
     "def _pad_arr(arr, pad_size=10):\n",
     "    return np.pad(\n",
     "        arr, \n",
-    "        ((pad_size, pad_size), (pad_size, pad_size), (0, 0)),   # pad size to each dimension, require tensor to have size (H,W, C)\n",
+    "        ((0, 0), (pad_size, pad_size), (pad_size, pad_size), (0, 0)),   # pad size to each dimension, require tensor to have size (H,W, C)\n",
     "        mode='constant', \n",
     "        constant_values=0)\n",
     "\n",
-    "mask_fp = \"..\\\\resources\\\\examples\\\\breps\\\\mask\\\\mask_8.pkl\"\n",
-    "geo_fp = mask_fp.replace('mask', 'xyz')\n",
     "\n",
-    "with open(geo_fp, 'rb') as f: geo_orig = pickle.load(f)\n",
-    "with open(mask_fp, 'rb') as f: mask = pickle.load(f)\n",
+    "def resample_boundary(points, delta, outlier_thresh=0.05):\n",
     "\n",
+    "    points = np.asarray(points)\n",
+    "    \n",
+    "    # remove outliers\n",
+    "    deltas_prev = np.linalg.norm(points - np.roll(points, 1, axis=0), axis=1)\n",
+    "    deltas_next = np.linalg.norm(points - np.roll(points, -1, axis=0), axis=1)    \n",
+    "        \n",
+    "    valid_pts = np.logical_and(deltas_prev < outlier_thresh, deltas_next < outlier_thresh)\n",
+    "    points = points[valid_pts, :]\n",
+    "        \n",
+    "    # Compute distances between consecutive points\n",
+    "    points = np.vstack([points, points[0]])  # Close the boundary\n",
+    "    deltas = np.linalg.norm(np.diff(points, axis=0), axis=1)\n",
+    "    \n",
+    "    # Compute cumulative arc length\n",
+    "    arc_lengths = np.insert(np.cumsum(deltas), 0, 0)\n",
+    "\n",
+    "    # Total length of the boundary\n",
+    "    total_length = arc_lengths[-1]\n",
+    "\n",
+    "    # Number of new points\n",
+    "    num_points = int(np.ceil(total_length / delta)) + 1\n",
+    "\n",
+    "    # New equally spaced arc lengths\n",
+    "    new_arc_lengths = np.linspace(0, total_length, num=num_points)\n",
+    "\n",
+    "    # Interpolate to find new points\n",
+    "    new_points = np.zeros((num_points, 3))\n",
+    "    for i in range(3):  # For x, y, z coordinates\n",
+    "        new_points[:, i] = np.interp(new_arc_lengths, arc_lengths, points[:, i])\n",
+    "\n",
+    "    return new_points\n",
+    "\n",
+    "\n",
+    "_CMAP = mpl.colormaps['rainbow']\n",
+    "\n",
+    "# # load data\n",
+    "# mask_fp = \"..\\\\resources\\\\examples\\\\breps\\\\data\\\\mask\\\\mask_8.pkl\"\n",
+    "# geo_fp = mask_fp.replace('mask', 'xyz')\n",
+    "# with open(geo_fp, 'rb') as f: geo_orig = pickle.load(f)\n",
+    "# with open(mask_fp, 'rb') as f: mask = pickle.load(f)\n",
+    "\n",
+    "# load data gt\n",
+    "_RESO = 1024\n",
+    "data_fp = f\"E:\\\\lry\\\\data\\\\AIGP\\\\demo_v2\\\\Q2\\\\brep_reso_{_RESO}_edge_snap\\\\00000.pkl\"\n",
+    "with open(data_fp, 'rb') as f: data = pickle.load(f)\n",
+    "geo_orig, mask = data['surf_wcs'], data['surf_mask']\n",
+    "\n",
+    "geo_orig = _pad_arr(geo_orig, pad_size=5)\n",
+    "mask = _pad_arr(mask, pad_size=5)\n",
+    "\n",
+    "# visualization buffers\n",
     "surf_points = []\n",
     "surf_colors = []\n",
-    "\n",
     "boundary_points = []\n",
     "boundary_point_colors = []\n",
     "\n",
+    "# process data\n",
     "for s_idx in range(mask.shape[0]):\n",
     "    \n",
-    "    if sum(geo_orig[s_idx].flatten() > 0) < 0: continue\n",
+    "    geo_dist = np.linalg.norm(geo_orig[s_idx], axis=-1)\n",
+    "    if geo_dist.min() < 1e-6 and geo_dist.max() < 1e-6: continue\n",
     "        \n",
-    "    valid_pts = np.where(mask[s_idx, :, :, 0] > 0.5)\n",
-    "    valid_pts = geo_orig[s_idx, valid_pts[0], valid_pts[1], :]\n",
+    "    valid_pts = np.where(mask[s_idx, :, :, 0] > 0.5)    \n",
+    "    \n",
+    "    valid_pts = geo_orig[s_idx, valid_pts[0], valid_pts[1], :]    \n",
     "    valid_pts = valid_pts[np.random.randint(0, valid_pts.shape[0], 1000), :]\n",
     "    surf_points.append(valid_pts)\n",
     "    surf_colors.append(np.zeros_like(valid_pts) + 0.5)\n",
-    "        \n",
-    "    mask_img = (mask[s_idx, :, :] * 255.0).astype(np.uint8)\n",
-    "    geo_img = ((geo_orig[s_idx, :, :] + 1.0) * mask[s_idx, :, :] * 125).astype(np.uint8)\n",
     "    \n",
-    "    _, thresh = cv2.threshold(mask_img, 0, 255, cv2.THRESH_BINARY)        \n",
+    "    # erode mask image \n",
+    "    mask_img = (mask[s_idx] * 255.0).astype(np.uint8) \n",
+    "    kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (3, 3)) \n",
+    "    mask_img = cv2.erode(mask_img, kernel, iterations=1)\n",
+    "    mask_img[mask_img >= 150] = 255\n",
+    "    mask_img[mask_img < 150] = 0 \n",
     "    \n",
-    "    kernel = np.ones((3, 3), np.uint8)     \n",
-    "    geo_img = cv2.dilate(geo_img, kernel, iterations=1)\n",
+    "    plt.imshow(mask_img)\n",
+    "    plt.show()\n",
     "    \n",
-    "    contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
-    "    \n",
-    "    dst = np.zeros_like(geo_img)\n",
-    "    \n",
-    "    # 逼近每个轮廓为多边形\n",
-    "    poly = []\n",
-    "    for cnt in contours:\n",
-    "        epsilon = 0.005 * cv2.arcLength(cnt, True)\n",
-    "        approx = cv2.approxPolyDP(cnt, epsilon, True)\n",
-    "        poly.append(approx)\n",
-    "        \n",
-    "    for i in range(len(poly)):\n",
-    "        cv2.drawContours(dst, poly, i, 255, 1, 8, hierarchy)\n",
+    "    # # extract contours from mask image\n",
+    "    # _, thresh = cv2.threshold(mask_img, 128, 255, cv2.THRESH_BINARY)        \n",
+    "    # contours, hierarchy = cv2.findContours(thresh, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE)\n",
+    "    # contour_pts = [np.squeeze(contour, axis=1) for contour in contours if contour.shape[0] > 16]\n",
     "\n",
-    "    color = np.random.randint(0, 255, (3,)).tolist()\n",
+    "    # for contour in contours:\n",
+    "    #     if contour.shape[0] < 16: continue  # custom threshold to remove small contours\n",
+    "    #     contour_pts = np.squeeze(contour, axis=1)\n",
     "    \n",
-    "    color = np.random.rand(1, 3)\n",
-    "    pts = np.where(dst == 255)    \n",
-    "    boundary_points.append(geo_img[pts[0], pts[1], :])\n",
-    "    boundary_point_colors.append(color.repeat(len(pts[0]), axis=0))\n",
-    "    \n",
-    "    # plt.imshow(dst * color[None])\n",
-    "    # plt.show()\n",
-    "    \n",
-    "    # poly = []\n",
-    "    # # dst = np.zeros((mask_img.shape[0], mask_img.shape[1], 3), dtype=np.uint8) + geo_img\n",
-    "    \n",
-    "    # for i in range(len(contours)):\n",
-    "    #     # Create a mask image that contains the contour filled in\n",
-    "    #     cimg = np.zeros_like(geo_img)\n",
-    "    #     cv2.drawContours(cimg, contours, i, color=255, thickness=-1)\n",
-    "    #     plt.imshow(cimg)\n",
+    "    #     # extract boundary points\n",
+    "    #     geo_arr = geo_orig[s_idx]\n",
+    "    #     geo_sample_pts = geo_arr[contour_pts[:, 1], contour_pts[:, 0], :]    \n",
+    "    #     geo_sample_pts = geo_sample_pts[np.linalg.norm(geo_sample_pts, axis=-1) > 0.01, :]\n",
+    "        \n",
+    "    #     # resample boundary points\n",
+    "    #     geo_sample_pts = resample_boundary(geo_sample_pts, 0.01, outlier_thresh=0.1)\n",
     "\n",
-    "    #     # Access the image pixels and create a 1D numpy array then add to list\n",
-    "    #     pts = np.where(cimg == 255)\n",
-    "    #     print(s_idx, i, len(pts[0]))\n",
-    "        \n",
-    "    #     boundary_points.append(geo_img[pts[0], pts[1], :])\n",
-    "    #     boundary_point_colors.append(np.random.rand(1, 3).repeat(len(pts[0]), axis=0))\n",
-    "        \n",
-    "        \n",
-    "boundary_points = np.concatenate(boundary_points, axis=0).astype(np.float32) / 125.0 - 1.0\n",
+    "    #     # save for visualization\n",
+    "    #     boundary_points.append(geo_sample_pts)\n",
+    "    #     boundary_point_colors.append(np.random.rand(3)[None].repeat(geo_sample_pts.shape[0], axis=0))\n",
+    "    #     # boundary_point_colors.append(_CMAP(np.linspace(0, 1, len(geo_sample_pts)))[:, :3])\n",
+    "            \n",
+    "\n",
+    "###################### visualization ########################\n",
+    "boundary_points = np.concatenate(boundary_points, axis=0).astype(np.float32)\n",
     "boundary_point_colors = np.concatenate(boundary_point_colors, axis=0)\n",
+    "\n",
+    "# filtering points that are too close to origin\n",
+    "close_to_origin = np.linalg.norm(boundary_points, axis=1) > 0.001\n",
+    "boundary_points = boundary_points[close_to_origin, :]\n",
+    "boundary_point_colors = boundary_point_colors[close_to_origin, :]\n",
     "boundary_pcd = _to_o3d_pc(boundary_points, boundary_point_colors)\n",
     "\n",
     "surf_points = np.concatenate(surf_points, axis=0).astype(np.float32)\n",
-    "surf_colors = np.concatenate(surf_colors, axis=0)\n",
-    "surf_pcd = _to_o3d_pc(surf_points, surf_colors)\n",
-    "    \n",
-    "    # plt.axis('off')\n",
-    "    # plt.imshow(dst)\n",
-    "    # plt.show()\n",
+    "surf_pcd = _to_o3d_pc(surf_points)    \n",
     "            \n",
-    "# ret, thresh = cv2.threshold(mask, 127, 255, 0)\n",
-    "o3d.visualization.draw_geometries([boundary_pcd])"
+    "mesh_frame = o3d.geometry.TriangleMesh.create_coordinate_frame(size=0.5, origin=[0., 0., 0.])\n",
+    "o3d.visualization.draw_geometries([\n",
+    "    mesh_frame, \n",
+    "    boundary_pcd, \n",
+    "    # surf_pcd\n",
+    "    ])\n",
+    "\n",
+    "# o3d.visualization.draw_geometries([\n",
+    "#     mesh_frame, \n",
+    "#     boundary_pcd, \n",
+    "#     surf_pcd\n",
+    "#     ])\n",
+    "############################################################"
    ]
   },
   {
