--- a/notebooks/test_scripts.ipynb
+++ b/notebooks/test_scripts.ipynb
@@ -2359,18 +2359,11 @@
     "plt.title('B-spline to Fitted Bézier Curve')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "anno_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2384,7 +2377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
