SurfPos && SurfZ Training

--- a/notebooks/test_word_emb.ipynb
+++ b/notebooks/test_word_emb.ipynb
@@ -164,8 +164,8 @@
     "\n",
     "####################### 3. Load data items (JSON) #######################\n",
     "data_root = \"E:\\\\lry\\\\data\\\\AIGP\\\\demo_v2\\\\Q2\\\\patterns\\\\\"\n",
-    "output_root = \"E:\\\\lry\\\\data\\\\AIGP\\\\demo_v2\\\\Q2\\\\patterns_with_caption\\\\\"\n",
-    "os.makedirs(output_root, exist_ok=True)\n",
+    "# output_root = \"E:\\\\lry\\\\data\\\\AIGP\\\\demo_v2\\\\Q2\\\\patterns_with_caption\\\\\"\n",
+    "# os.makedirs(output_root, exist_ok=True)\n",
     "data_dirs = glob(os.path.join(data_root, '*.json'))\n",
     "all_items = []\n",
     "for data_item in tqdm(data_dirs):\n",
@@ -180,14 +180,41 @@
     "            \n",
     "        pattern_spec[\"caption\"] = data_caption\n",
     "        \n",
-    "        with open(os.path.join(output_root, os.path.basename(data_item)), \"w\", encoding='utf-8') as tf:\n",
-    "            json.dump(pattern_spec, tf, indent=4, ensure_ascii=False)\n",
+    "        # with open(os.path.join(output_root, os.path.basename(data_item)), \"w\", encoding='utf-8') as tf:\n",
+    "        #     json.dump(pattern_spec, tf, indent=4, ensure_ascii=False)\n",
     "    \n",
     "    except Exception as e:\n",
     "        print('[ERROR] ', data_item, e)\n",
     "    \n",
     "###########################################################################"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import json\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "data_dir = \"/data/AIGP/brep_reso_256_edge_snap\"\n",
+    "caption_dir = \"/data/AIGP/patterns_with_eng_caption\"\n",
+    "\n",
+    "for data_fp in tqdm(os.listdir(data_dir)):\n",
+    "    print(data_fp)\n",
+    "    break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
